--- a/Site web/English/Members.html
+++ b/Site web/English/Members.html
@@ -53,7 +53,8 @@
             <h2> Alexandra Renaud
             </h2>
             <p>
-
+                This is my 4th year in robotics, I am very happy as every year I learn new things. This year I was able to help a little bit with the robot design, the kiosk, our video, our T-shirts and with journalism, all while trying to manage meetings and the budget.
+                We have a wonderful team this year and I am blessed to be part of it.
             </p>
         </div>
         <div id="case">
@@ -83,6 +84,8 @@
             <h2> Benjamin Brault
             </h2>
             <p>
+                First year in the club and my first experience in a robotics competition. Working in the club gave me the opportunity to gain knowledge in the conception of a robot and in discovering new softwares. Also, I got to meet wonderful people, that I’m happy
+                to call friends, with whom I can have a laugh while working on an enormous project. I was also able to use my creative side to help creating the web site and the video.
 
             </p>
         </div>
@@ -104,7 +107,7 @@
                 Charles Bourque
             </h2>
             <p>
-
+                Dear diary, it is now my second year in the club for the CRC. I got hooked and I’m not about to stop. The club is a place to have fun and make friends. It’s like my second family.
             </p>
         </div>
         <div id="case">
@@ -124,6 +127,8 @@
             <h2> Mikhael Bianki-Massé
             </h2>
             <p>
+                First year in the robotics club and in fact, the first time in a club. Being part of this huge project enabled me to enhance my skills on the human and teamwork levels. I took a big part not only in the assembling of the kiosk, particularly on the control
+                panel, but also on the robot on a mechanical and structural level, and lastly, on the video.
 
             </p>
         </div>
@@ -139,11 +144,13 @@
         </div>-->
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre lamon.jpg" alt="image" width="100%" height="100%" />
             </div>
-            <h2> Nicolas Lamon
+            <h2> Nicolas Lamon, Mentor
             </h2>
             <p>
+                This year, like all the other years I was involved in the robotic team, either as a participant or a mentor, I am still amazed how this activity can bring these young people together and achieve big things. From the conception of the robot to the painting
+                of the making of the video, I'm there to advise them and keep them out of trouble.
 
             </p>
         </div>
@@ -154,7 +161,8 @@
             <h2> Chloé Legault
             </h2>
             <p>
-
+                It’s now my second and last year at Montmorency’s robotics club. This year, I mostly worked on the video, the kiosk and the contents of the web site. Even after just two years, I can say that Montmorency knows only one way to do things: with urgency.
+                On the other hand, stress is an excellent way of forming friendships.
             </p>
         </div>
         <div id="case">
@@ -164,7 +172,8 @@
             <h2> Olivier Genest
             </h2>
             <p>
-
+                During my stay at Montmorency’s robotics club, I was able to put my knowledge to work. Programming the kiosk was one of the most interesting challenges that I had to accomplish because of its level of difficulty that was simply captivating. I had the
+                time of my life working with this team on that project.
             </p>
         </div>
         <div id="case">
@@ -190,7 +199,7 @@
         </div>-->
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre karine.jpg" alt="image" width="100%" height="100%" />
             </div>
             <h2> Karine Huot, Personne-ressource du club de robotique
             </h2>
