--- a/Site web/Francais/Les membres.html
+++ b/Site web/Francais/Les membres.html
@@ -53,7 +53,8 @@
             <h2> Alexandra Renaud
             </h2>
             <p>
-
+                C'est ma 4`me année en robotique, je suis toujours aussi comblée, à chaque année j'apprend de nouvelles choses. Cette année, j'ai pu aidé un petit peu avec la conception robot, le kiosque, le video, les chandails et le journalisme, tout en essayant de
+                gérer les rencontre et le budget. Nous avons une merveilleuse équipe cette année et je suis plus que choyée d'en faire partie.
             </p>
         </div>
         <div id="case">
@@ -63,7 +64,7 @@
             <h2> Jiali Sauvé
             </h2>
             <p>
-                Deuxième année de robotique. J'aide principalement le kiosque, mais aussi ici et là quand je le peux. C'est vraiment une formidable expérience avec tout le monde on rit et on s'amuse beaucoup.
+                Deuxième année de robotique. J'aide principalement le kiosque, mais aussi ici et là quand je le peux. C'est vraiment une formidable expérience à vivre avec tout le monde, on rit et on s'amuse beaucoup.
             </p>
         </div>
         <div id="case">
@@ -73,7 +74,7 @@
             <h2> Florence Millette
             </h2>
             <p>
-                Ma troisième année en robotique! Je fais un peu de tout, du robot, du kiosque et où on a besoin d’aide, mais cette année je me suis lancée dans la programmation du site web! Je n’avais jamais fait ça de ma vie mais j’ai adoré expérimenter.
+                Ma troisième année en robotique! Je fais un peu de tout, du robot, du kiosque et où on a besoin d’aide. Cette année, je me suis lancée dans la programmation du site web! Je n’avais jamais fait ça de ma vie mais j’ai adoré expérimenter.
             </p>
         </div>
         <div id="case">
@@ -83,6 +84,9 @@
             <h2> Benjamin Brault
             </h2>
             <p>
+                Première année dans le club de robotique et première expérience dans une compétition de robotique pour ma part. Grâce à cette opportunitée, j’ai pu acquerir des connaissances dans la conception dn robot et dans le fonctionnement de certains logiciels.
+                De plus, j’ai pu apprendre à connaitre de superbes personnes que je peux maintenant appeler amis avec lequels j’ai pu avoir des moments de fou rire tout en élaborant diverse partie d’un énorme projet. J’ai ainsi pu aider à la conception
+                artistique du site web et la vidéo ainsi qu’à la conception du robot.
 
             </p>
         </div>
@@ -104,7 +108,7 @@
                 Charles Bourque
             </h2>
             <p>
-                Dear diary. C’est ma deuxième année de robotique pour la CRC. J’ai encore la piqûre et pas sur le point d’arrêté. Un endroit pour avoir du plaisir et se faire des amis. C’est comme ma deuxième famille!
+                Dear diary. C’est ma deuxième année de robotique pour la CRC. J’ai encore la piqûre et je ne suis pas prêt d’arrêter. Un endroit pour avoir du plaisir et se faire des amis, être en robotique c'est comme avoir une deuxième famille!
             </p>
         </div>
         <div id="case">
@@ -114,7 +118,7 @@
             <h2> Jérémie L'Abbée
             </h2>
             <p>
-                Déjà ma cinquième année dans la compétition de robotique CRC et je ne suis pas prêt d’arrêter. À chaque année j’apprend de plus en plus de connaissance et je suis toujours en quête d'une première victoire.
+                Déjà ma cinquième année dans la compétition de robotique CRC et je ne suis pas prêt d’arrêter. À chaque année j’apprend beaucoup de nouvelles connaissances et je suis toujours en quête d'une première victoire.
             </p>
         </div>
         <div id="case">
@@ -124,8 +128,8 @@
             <h2> Mikhael Bianki-Massé
             </h2>
             <p>
-                Première année en robotique et de façon plus générale dans un club, participer à ce grand projet m'a permis de me développer grandement sur le plan humain et du travail d'équipe. Je me suis grandement impliqué dans le kiosque notamment au niveau du tableau
-                de commande mais également dans le robot d'un point de vue mécanique et structurel et finalement au niveau du film.
+                Première année en robotique et de façon plus générale dans un club, participer à ce grand projet m'a permis de me développer grandement sur le plan humain et du travail d'équipe. Je me suis grandement impliqué dans le kiosque, notamment au niveau du tableau
+                de commande, mais également dans le robot d'un point de vue mécanique et structurel et finalement, au niveau du film.
             </p>
         </div>
         <!--<div id="case">
@@ -137,15 +141,16 @@
             <p>
 
             </p>
-        </div>-->
+        </div> -->
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre lamon.jpg" alt="image" width="100%" height="100%" />
             </div>
-            <h2> Nicolas Lamon
+            <h2> Nicolas Lamon, Mentor
             </h2>
             <p>
-
+                Cette année, comme toutes les autres années auxquelles j’ai fait partie de l’équipe de robotique, autant comme participant que mentor, je suis toujours étonné comment cette activité rassemble des jeunes à travailler ensemble pour accomplir de gros projets.
+                De la conception du robot jusqu’au tournage du vidéo, je suis là pour les conseiller et les garder sur le droit chemin.
             </p>
         </div>
         <div id="case">
@@ -181,7 +186,17 @@
                 en échange. Un merci tout special à la capitaine pour m'avoir accueillit si chaleureusement.
             </p>
         </div>
-        <!-- <div id="case">
+        <!--<div id="case">
+            <div id="membres">
+                <img src="../images/membre ben2.jpg" alt="image" width="100%" height="100%" />
+            </div>
+            <h2> Benjamin De Carufel
+            </h2>
+            <p>
+
+            </p>
+        </div> -->
+        <!--<div id="case">
             <div id="membres">
                 <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
             </div>
@@ -193,7 +208,7 @@
         </div>-->
         <div id="case">
             <div id="membres">
-                <img src="../images/image temporaire.png" alt="image" width="100%" height="100%" />
+                <img src="../images/membre karine.jpg" alt="image" width="100%" height="100%" />
             </div>
             <h2> Karine Huot, Personne-ressource du club de robotique
             </h2>
@@ -202,6 +217,7 @@
                 supporter et les aider à aller encore plus loin et se dépasser. Bravo la gang et on lâche pas!
             </p>
         </div>
+
 
 </body>
 
