--- a/Site web/Francais/Souvenirs.html
+++ b/Site web/Francais/Souvenirs.html
@@ -62,10 +62,10 @@
         <img src="../images/souvenir 14.jpg" alt="boule 7">
         <img src="../images/souvenir 15.jpg" alt="boule 7">
         <img src="../images/souvenir 16.jpg" alt="boule 7">
-        <img src="../images/souvenir 18.jpg" alt="boule 7">
+        <img src="../images/membre ben2.jpg" alt="boule 7">
         <img src="../images/souvenir 19.jpg" alt="boule 7">
         <img src="../images/souvenir 20.jpg" alt="boule 7">
-        <img src="../images/souvenir 21.jpg" alt="boule 7">
+        <img src="../images/souvenir 18.jpg" alt="boule 7">
         <img src="../images/souvenir 22.jpg" alt="boule 7">
         <video controls>
             <source src="../images/video-1579995613.mp4" type="video/mp4">
