fin souvenirs photo jeu accueil etc

--- a/Site web/English/Memories.html
+++ b/Site web/English/Memories.html
@@ -62,12 +62,12 @@
         <img src="../images/souvenir 14.jpg" alt="boule 7">
         <img src="../images/souvenir 15.jpg" alt="boule 7">
         <img src="../images/souvenir 16.jpg" alt="boule 7">
-        <img src="../images/souvenir 18.jpg" alt="boule 7">
+        <img src="../images/membre ben2.jpg" alt="boule 7">
         <img src="../images/souvenir 19.jpg" alt="boule 7">
         <img src="../images/souvenir 20.jpg" alt="boule 7">
-        <img src="../images/souvenir 21.jpg" alt="boule 7">
+        <img src="../images/souvenir 18.jpg" alt="boule 7">
         <img src="../images/souvenir 22.jpg" alt="boule 7">
-        <video controls>
+        <!-- <video controls>
             <source src="../images/video-1579995613.mp4" type="video/mp4">
                 
           Your browser does not support the video tag.
@@ -81,10 +81,9 @@
             <source src="../images/video-1579996543.mp4" type="video/mp4">
                 
           Your browser does not support the video tag.
-          </video>
+          </video>-->
 
     </div>
-
 
 </body>
 
