--- a/Site web/Francais/Souvenirs.html
+++ b/Site web/Francais/Souvenirs.html
@@ -67,7 +67,7 @@
         <img src="../images/souvenir 20.jpg" alt="boule 7">
         <img src="../images/souvenir 18.jpg" alt="boule 7">
         <img src="../images/souvenir 22.jpg" alt="boule 7">
-        <video controls>
+        <!-- <video controls>
             <source src="../images/video-1579995613.mp4" type="video/mp4">
                 
           Your browser does not support the video tag.
@@ -81,7 +81,7 @@
             <source src="../images/video-1579996543.mp4" type="video/mp4">
                 
           Your browser does not support the video tag.
-          </video>
+          </video>-->
 
     </div>
 
