--- a/Site web/Francais/Les membres.html
+++ b/Site web/Francais/Les membres.html
@@ -53,8 +53,8 @@
             <h2> Alexandra Renaud
             </h2>
             <p>
-                C'est ma 4`me année en robotique, je suis toujours aussi comblée, à chaque année j'apprend de nouvelles choses. Cette année, j'ai pu aidé un petit peu avec la conception robot, le kiosque, le video, les chandails et le journalisme, tout en essayant de
-                gérer les rencontre et le budget. Nous avons une merveilleuse équipe cette année et je suis plus que choyée d'en faire partie.
+                C'est ma 4e année en robotique, je suis toujours aussi comblée, à chaque année j'apprend de nouvelles choses. Cette année, j'ai pu aidé un petit peu avec la conception robot, le kiosque, le video, les chandails et le journalisme, tout en essayant de gérer
+                les rencontre et le budget. Nous avons une merveilleuse équipe cette année et je suis plus que choyée d'en faire partie.
             </p>
         </div>
         <div id="case">
@@ -64,7 +64,7 @@
             <h2> Jiali Sauvé
             </h2>
             <p>
-                Deuxième année de robotique. J'aide principalement le kiosque, mais aussi ici et là quand je le peux. C'est vraiment une formidable expérience à vivre avec tout le monde, on rit et on s'amuse beaucoup.
+                Deuxième année de robotique. J'aide principalement pour le kiosque, mais aussi ici et là quand je le peux. C'est vraiment une formidable expérience à vivre avec tout le monde, on rit et on s'amuse beaucoup.
             </p>
         </div>
         <div id="case">
@@ -85,7 +85,7 @@
             </h2>
             <p>
                 Première année dans le club de robotique et première expérience dans une compétition de robotique pour ma part. Grâce à cette opportunitée, j’ai pu acquerir des connaissances dans la conception dn robot et dans le fonctionnement de certains logiciels.
-                De plus, j’ai pu apprendre à connaitre de superbes personnes que je peux maintenant appeler amis avec lequels j’ai pu avoir des moments de fou rire tout en élaborant diverse partie d’un énorme projet. J’ai ainsi pu aider à la conception
+                De plus, j’ai pu apprendre à connaitre de superbes personnes que je peux maintenant appeler "amis" avec lequels j’ai pu avoir des moments de fou rire tout en élaborant diverses parties d’un énorme projet. J’ai ainsi pu aider à la conception
                 artistique du site web et la vidéo ainsi qu’à la conception du robot.
 
             </p>
@@ -149,8 +149,8 @@
             <h2> Nicolas Lamon, Mentor
             </h2>
             <p>
-                Cette année, comme toutes les autres années auxquelles j’ai fait partie de l’équipe de robotique, autant comme participant que mentor, je suis toujours étonné comment cette activité rassemble des jeunes à travailler ensemble pour accomplir de gros projets.
-                De la conception du robot jusqu’au tournage du vidéo, je suis là pour les conseiller et les garder sur le droit chemin.
+                Cette année, comme toutes les autres années auxquelles j’ai fait partie de l’équipe de robotique, autant comme participant que mentor, je suis toujours étonné de voir comment cette activité rassemble des jeunes à travailler ensemble pour accomplir de
+                gros projets. De la conception du robot jusqu’au tournage du vidéo, je suis là pour les conseiller et les garder sur le droit chemin.
             </p>
         </div>
         <div id="case">
@@ -160,7 +160,7 @@
             <h2> Chloé Legault
             </h2>
             <p>
-                J'en suis maintenant à ma deuxième et dernière année de robotique avec Montmorency. Cette année j'ai principalement aidé pour la vidéo, le kiosque, ainsi que le contenu du site web. Après uniquement deux ans, je peux anoncer que l'urgence est le seul
+                J'en suis maintenant à ma deuxième et dernière année de robotique avec Montmorency. Cette année j'ai principalement aidé pour la vidéo, le kiosque, ainsi que le contenu du site web. Après uniquement deux ans, je peux annoncer que l'urgence est le seul
                 moyen de faire les choses que Montmorency connait. Le stress est pourtant un excellent moyen de tisser des liens.
             </p>
         </div>
@@ -179,11 +179,11 @@
             <div id="membres">
                 <img src="../images/membre 6.jpg" alt="image" width="100%" height="100%" />
             </div>
-            <h2> Elyanna
+            <h2> Elyanna Gauthier
             </h2>
             <p>
                 Joindre le club de robotique a été une bouffée d'air frais dans mon année. Ces gens sont devenue ma famille et ont permis à ma personne de grandir. Faire partie de ce club m'a donné le courage d'exploiter mes talents et j'ai recu beaucoup de gratitude
-                en échange. Un merci tout special à la capitaine pour m'avoir accueillit si chaleureusement.
+                en échange. Un merci tout special à la capitaine pour m'avoir accueilli si chaleureusement.
             </p>
         </div>
         <!--<div id="case">
