--- a/Site web/Francais/Page principale.html
+++ b/Site web/Francais/Page principale.html
@@ -47,20 +47,20 @@
 
     <div id="contenu">
         <h2>
-            Le club de robotique du collège Montmorency
+            Le club de robotique du Collège Montmorency
         </h2>
         <p>
-            Depuis 2006, le club de robotique accueille de nombreux élèves avec des intérêts très variés pour participer à la compétition de robotique CRC et ainsi utiliser leur intérêts pour l'art et la science pour compétitionner dans les différentes catégories.
-            Le club est situé au cégep <a href="https://www.google.com/maps/place/Coll%C3%A8ge+Montmorency/@45.5594019,-73.7206471,17z/data=!3m1!4b1!4m5!3m4!1s0x4cc9223815890e79:0xe7408a77564697c4!8m2!3d45.5594019!4d-73.7184584"> Montmorency</a>            (475 Boulevard de l'Avenir, Laval, QC H7N 5H9).
+            Depuis 2006, le club de robotique accueille de nombreux étudiants avec des intérêts très variés pour participer à la compétition de robotique CRC et ainsi utiliser leurs intérêts pour l'art et la science et compétitionner dans les différentes catégories.
+            Le club de robotique est situé au cégep <a href="https://www.google.com/maps/place/Coll%C3%A8ge+Montmorency/@45.5594019,-73.7206471,17z/data=!3m1!4b1!4m5!3m4!1s0x4cc9223815890e79:0xe7408a77564697c4!8m2!3d45.5594019!4d-73.7184584"> Montmorency</a>            (475 Boulevard de l'Avenir, Laval, QC H7N 5H9).
         </p>
 
         <h2>
             C'est quoi CRC?
         </h2>
         <p>
-            CRC est un organisme à but non lucratif ayant comme objectif de rendre plus accessible les compétitions de robotiques aux jeunes du secondaire et du cégep tout en valorisant le domaine des STIM (science, technologie, ingénierie et art) ainsi que les arts
-            et les langues. La compétition de robotique CRC est une compétition annuelle qui demande aux écoles participantes de construire un robot télécommandable, de le programmer, de se préparer pour une compétition de programmation, de construire
-            un site web, de construire un kiosque et de filmer et monter une vidéo de toute pièces.
+            La CRC est un organisme à but non lucratif ayant comme objectif de rendre le plus accessible possible les compétitions de robotique aux jeunes du secondaire et du cégep tout en valorisant le domaine des STIM (science, technologie, ingénierie et art) ainsi
+            que les arts et les langues. La compétition de robotique CRC est une compétition annuelle qui demande aux écoles participantes de construire un robot télécommandable, de le programmer, de se préparer pour une compétition de programmation,
+            de construire un site web, de construire un kiosque et de filmer et monter une vidéo de toute pièce.
             <br/> Cliquez <a href="http://robo-crc.ca/fr/a-propos/">ici</a> pour plus d'information.
         </p>
 
