journal de bord fr

--- a/Site web/Francais/Journal de bord.html
+++ b/Site web/Francais/Journal de bord.html
@@ -49,7 +49,7 @@
         <p class="images-float-left">
             <img src="../images/logbook 2.jpg" alt="jounal de bord" />
         </p>
-        <h2>Rencontre 1</h2>
+        <h2>Rencontre officielle 1</h2>
         <p style="line-height: 25px;">
             Une vingtaine d’étudiants intéressée par la robotique est répartie aux quatre coins d’une salle de classe. C’est la première journée que tout le monde se rencontre, autant les nouveaux que les anciens sont excités de commencer l’année de robotique. La
             soirée est ouverte par les présentations : Karine, notre responsable, est la première à se présenter, puis c’est le tour des anciens et finalement les nouveaux arrivants ferment les présentations. Alexandra, notre capitaine, explique ce qu’est
@@ -58,14 +58,14 @@
             été prise, pourtant il n’y a pas d’urgence. Le choix du thème est donc remis à une prochaine rencontre. Les anciens signalent, alors que la soirée n’est pas finie, tous n’ont pas encore vu le local. Bruyamment, on se déplace vers ledit local.
             Le tour est rapidement fait, c’est un petit local en désordre. Le co-capitaine, Charles présente le robot de l’année précédente. La réunion se conclut sur cette présentation, la prochaine réunion aura lieu dans deux semaines.
         </p>
-        <h2>Rencontre 2</h2>
+        <h2>Rencontre officielle 2</h2>
         <p style="line-height: 25px;">
             Il a été décidé que la réunion serve en premier lieu à démonter le robot de l’année passée. Tous les nouveaux sont donc convoqués afin d’apprendre par le fait même les mécanismes de base principalement utilisés à Montmorency. Charles et Jérémy présentent
             un petit cours sur les matériaux, les outils et sur les façons de faire. Les nouveaux posent beaucoup de questions sur la constitution du robot, pourquoi certains matériaux ont été utilisés plutôt que d’autres. Certaines des alternatives qu’ils
             ont présentées dans leurs questions faisait beaucoup de sens, ils sont même venus avec des solutions que nous n’avions pas pensées auparavant. La gêne de ne pas pouvoir répondre à ses questions était largement dépassée par la fierté d’avoir
             de nouveaux atouts à notre équipe. La robotique était une passion partagée par tous. Quelques heures plus tard, le robot était complètement analysé et démonté. Chacun put enfin retourner chez soi.
         </p>
-        <h2>Rencontre 3</h2>
+        <h2>Rencontre officielle 3</h2>
         <p style="line-height: 25px;">
             À la suite de la première rencontre, le thème 2019-2020 n’avait toujours pas été décidé, il est donc temps de le remettre à l’ordre du jour. Alexandra avait préparé un top 5 des vidéos de l’année précédente, ainsi qu’un montage vidéo des kiosques afin
             d’ouvrir la rencontre et de démontrer l’importance du choix du thème. Il a alors été remarqué que certaines vidéos sont très simples, pourtant excellentes, les vidéos complexes le sont tout aussi. La complexité de la vidéo n’est donc pas un
@@ -76,7 +76,7 @@
         <p class="images-float-right">
             <img src="../images/logbook 1.jpg" alt="jounal de bord" />
         </p>
-        <h2>Rencontre 4</h2>
+        <h2>Rencontre officielle 4</h2>
         <p style="line-height: 25px;">
             Depuis quelques jours, le choix de thème semble être clair, il ne reste plus qu’à l’officialiser. C’est donc avec plaisir qu’Alexandra annonce que le thème de Montmorency en 2019-2020 sera Inside Out. Tout le monde semble contenté par ce choix. Ce n’est
             pas long que le chaos prend le dessus, tout le monde a des idées et veut en parler à son voisin. Ce n’est qu’après une trentaine de minutes que le capitaine demande le retour de l’ordre, il est temps de présenter des idées. Benjamin et Alexandra
@@ -86,7 +86,7 @@
             pourtant jamais été une force de Montmorency, peut-être cela changera-t-il cette année? Chloé propose de faire un panneau de contrôle comme dans le film, il pourrait également être interactif. Benjamin propose quant à lui de faire passer un
             train au-dessus des murs. Le tableau se remplissait peu à peu de croquis de kiosques et de listes d’idées. Des idées, il n’en manquait pas. Le tableau est pris en photo, puis partager sur le groupe Facebook.
         </p>
-        <h2>Rencontre 5</h2>
+        <h2>Rencontre officielle 5</h2>
         <p style="line-height: 25px;">
             23 octobre 2020, deux jours après la remise électronique des règlements préliminaires. La compétition commence peu à peu à se concrétiser. Nous avons un thème, d’innombrables idées de kiosques, de nouvelles recrues… il ne reste plus qu’à connaitre le
             jeu pour amorcer le robot. Alexandra commence par expliquer en quoi consiste le kick off et que les étudiants qui pourront y assister seront choisis sous peu. Puis, on décide de présenter les règlements reçus à l’aide du projecteur de la classe.
@@ -97,6 +97,89 @@
             théories sur le jeu ne manquent pas, déjà deux personnes sont au tableau pour faire des croquis d’arène et de robot. Sur un papier a été noter les questions pertinentes ayant fait éruptions pendant la lecture. Celles-ci nous aideront peut-être
             à mieux saisir les règlements une fois la version finale publiée.
         </p>
+        <h2>Rencontre officielle 6</h2>
+        <p style="line-height: 25px;">
+            Une fois le thème de l’année choisi, il est impératif de faire une soirée d’écoute du film. Une fois tout le monde arrivé dans la classe, on discute de ce qu’il est important de noter pendant le film. Les points à retenir sont donc les éléments importants,
+            les éléments ayant retenus notre attention et les décors nous ayant particulièrement intéressés. Nous nous installons donc dans le local confortablement, puis démarrons le film. Pendant le film, les crayons se font aller. À la fin, on met
+            en commun nos idées. Les éléments significatifs retenu au niveau du paysage sont la présence des boules de souvenirs tout au long du film, les îles de personnalité qui font partie de la mémoire de Riley et le panneau du centre de contrôle.
+            Les évènements importants retenus ont été la tentative d’échappement dans le train des idées, la chute de Tristesse et Joie dans la mémoire et la possibilité d’avoir des souvenirs contenant plus d’une émotion. Charles prend en photo l’ensemble
+            des points notés au tableau et la réunion se termine là-dessus. Tout le monde peut retourner chez soi, la tête pleine d’idées.
+        </p>
+        <h2>Rencontre officielle 7</h2>
+        <p style="line-height: 25px;">
+            Nous en sommes rendus à la dernière réunion avant le Kick Off. La réunion d’aujourd’hui doit servir à préciser qui travaillera sur quel aspect de la compétition. Nous avons séparé les disciplines comme initialement présentées lors de la première rencontre,
+            soit le robot, la vidéo, le kiosque, le site web, la programmation et la création des T-Shirt. Il a aussi été ajouté le contenu du site Web. Dans la classe tout le monde discute du temps qu’ils pensent pouvoir allouer au travail en robotique
+            à travers la session. En fonction du temps disponible et des intérêts les cases sous les différentes disciplines se remplissent de noms peu à peu. La vidéo semble emballer bien peu de monde, car il n’y a que 3 noms inscrits. Chloé explique
+            en quoi consiste la vidéo, soit la conception du script, la conception du décor, le jeu des personnages, la sonorisation, l’enregistrement et le montage. Il y a plus de dimension à la création d’une vidéo que ce qu’on voit devant la caméra.
+            Chacun semble y trouver son compte, la section vidéo est rapidement remplie.
+        </p>
+        <h2>Kick-Off</h2>
+        <p style="line-height: 25px;">
+            À la suite du kick off, les réunions se déroulent autrement. À la place d’être des réunions officielles organisées, les réunions deviennent éparses, dont les seuls participants sont les personnes concernées par l’objectif de la réunion.
+        </p>
+        <p class="images-float-left">
+            <img src="../images/robot pas mal fini avec lexan.jpg" alt="jounal de bord" />
+        </p>
+        <h2>Robot</h2>
+        <p style="line-height: 25px;">
+            L’équipe robot n’a pas attendu longtemps avant de se mettre en action. Dès le début de la première semaine, l’ensemble des membres ont lancé de nombreuses idées pour la construction du robot. Le design final se base sur la conception d’un système différent
+            pour chaque obstacle. À la suite de cette discussion, l’équipe a pu se lancer dans la construction de la base du robot et de son électronique pour qu’il puisse se déplacer, mais aussi pour que l’équipe puisse amorcer les tests. La deuxième
+            semaine se déroula à merveille. Avec une base fonctionnelle l’équipe se pencha sur le système pour les boutons champignons. Le système fut rapidement conçu et installé sur le robot, cependant il comportait encore des problèmes que l’on commença
+            à fixer. Par la suite, dans la même semaine nous avons commencé un prototype en pancarte électorale du système permettant de faire la balle enchaînée qui est un système deux en un puisqu’il permettrait de faire la planche articulée également.
+            La troisième semaine fut la semaine la plus productive. L’équipe a pu finir le système pour les boutons champignons avec succès. Le système avait la capacité de s’attaquer aux deux obstacles comme initialement prévu. Le système pour l’arche
+            fut inventé et construit la même semaine. Parmi tous les systèmes sur le robot il s’agit du système que toute l’équipe trouve le plus ridicule. Dans la semaine nous avons installé interrupteur pour arrêter le bras du système des boutons champignons
+            à la bonne place. La quatrième semaine commença plus lentement que les autres à cause des nombreux examens que l’équipe avait à réviser. Cependant cela n’a pas empêché l’équipe de finir en force la construction du robot. Pour finir la semaine
+            l’équipe mit au propre le système pour la balle enchainé avec du lexan et le système pour la tornade commençait à se construire. La cinquième semaine mis un terme au robot puisque nous avons finis de construire la tornade et nous avons par
+            la suite fais des plaques de protection tout autour du robot pour protéger tous les systèmes à l’intérieur. L’équipe était très fière d’avoir finis un robot deux semaines avant noël, mais leur dévouement sur le robot ne s’arrêtait là. Pendant
+            toutes les vacances de noël et même après les vacances, l’équipe ajusta tous les fils de tous les systèmes, renforça les systèmes et les moteurs qui en faisait partit et fit des drapeaux d’équipe fonctionnant avec des lumières et changeable
+            avec un interrupteur. Encore aujourd’hui, l’équipe travaille et teste le robot sans relâche pour qu’au jour de la compétition le robot soit à son meilleur.
+        </p>
+        <p class="images-float-right">
+            <img src="../images/Recordeur ancien logbook.jpg" alt="jounal de bord" />
+        </p>
+        <h2>Vidéo</h2>
+        <p style="line-height: 25px;">
+            La vidéo nécessita beaucoup de discussions avant le début du script afin de s’assurer que l’histoire correspondait à tous. Suite au Kick Off, les deux premières semaines ont servi à la discussion entre différents membres. Une fois qu’elle a eu une idée
+            d'où se diriger Chloé a pu commencer d’écrire le script en se basant sur les règlements et les dires du reste de l’équipe. Le script fut complet peu de temps avant Noël, Charles fut le premier à le vérifier. Suite à ses commentaires, Chloé
+            a pu rectifier certaines des transitions entre les scènes qui n’étaient pas suffisamment explicites. Peu après Noël, il a été possible de commencer à acheter le matériel pour les décorations et les costumes. Par la suite, on a enfin pu commencer
+            à filmer. Le film fut beaucoup plus long que prévu à filmer. Les raisons de ce retard était nombreuses, par exemple un manque de coordination de l’ensemble de l’équipe d’acteur et de son/caméra, l’entièreté du matériel n’avait pas été louer,
+            des acteurs ayant le fou rire, la gestion des prises de vues avec la caméra qui n’avait pas été inscrites sur le script, etc. Un sentiment d’urgence montait peu à peu chez les responsables de la vidéo. Malgré les contretemps l’entièreté de
+            la vidéo a pu être filmée, la dernière scène n’a été filmée que la veille de la date de remise. Le montage a donc été amorcé en même temps que la fin du filmage, afin d’optimiser le temps disponible.
+        </p>
+        <p class="images-float-left">
+            <img src="../images/journal de bord kiosque 2.jpg" alt="jounal de bord" />
+        </p>
+        <h2>Kiosque</h2>
+        <p style="line-height: 25px;">
+            La première semaine servie exclusivement à trouver des idées, en ayant le thème Inside out en tête le tout fut facilement possible. Les idées étaient nombreuses, elles allaient d’un plancher haut de 1,5 m, à un plancher transparent avec un train qui traverse
+            de bord en bord du kiosque transportant des boules d’émotions illuminée, jusqu’à des nuages et des îles d’émotions. Puis dans les premières semaines, les idées se sont lentement précisées et finalement on s’est décidé à faire un kiosque de
+            seulement 1 pied ½ de haut et de mettre un plancher plein car le lexan coûtait bien trop cher. Nous avons ensuite commencé à dessiner des plans du kiosque et il a été décidé de peindre les murs en mauves, de peinturer des îles représentant
+            diverses personnalités et mettre un tableau de contrôle comme dans celui du film à l’avant. Olivier et Charles ont commencé à programmer des bandes LED lumineuses qui annoncent les émotions ainsi qu’un train qui fera le tour de la structure.
+            La quatrième semaine suite au Kick Off permis d’entamer la construction des murs. Mikhaël surpris toute l’équipe de robotique par ses talents de menuiseries et de charpenteries. Après avoir construit les palettes du plancher en entier, il
+            a été décidé de ne pas les utiliser et de construire le kiosque directement sur le sol. Nous avons fait cela pour plusieurs raisons telles que la logistique, la capacité financière et au niveau de l’impraticabilité. Après le dilemme du plancher,
+            les murs ont été peinturé, puis des arches roses ont été peinturées sur le mur du fond. Notre peintre, Elyanna a pu commencer à peindre les îles de personnalités. Ces îles représentent des valeurs importantes du club de robotique, soit la
+            robotique, l'imagination et l’apprentissage.
+        </p>
+        <p class="images-float-right">
+            <img src="../images/journal de bord.jpg" alt="jounal de bord" />
+        </p>
+        <h2>Site Web</h2>
+        <p style="line-height: 25px;">
+            La première semaine, les personnes en charge de la programmation du site Web ont commencés par acquérir des bases de programmation sur HTML et CSS. La programmation était un domaine totalement nouveau pour eux, ils n’avaient jamais programmé de leur vie.
+            Les notes de cours d’un ami en technique d’informatique et certaines vidéos youtube furent les professeurs de l’équipe du site Web. Pendant quelques semaines, beaucoup d’expérimentation ont été faites et tranquillement le site Web a commencé
+            à ressembler à quelque chose. Environ une semaine avant la remise, beaucoup de documents de journalisme ont commencé à être envoyé et le photobooth des étudiants et mentors ont été faits. Une fois la programmation finie, Benjamin a aidé avec
+            le visuel du site et des images. Les programmeurs ont pu retourner sur leurs anciens codes et régler certains bugs et peaufiner certains paramètres, ce qu’ils n’auraient pas pu faire sans les connaissances acquises au courant de la session.
+            Plusieurs fois, le site ne fonctionnait pas et personne ne savait pourquoi, mais parfois ça marchait sans que personne ne comprenne pourquoi. Après avoir reçu la majorité des photos et des textes personnalisés de chaque étudiant, le site a
+            été mis en ligne le 26 janvier vers 7h30, cependant, la page d’accueil ne marchait pas et il y avait des problèmes avec la page des membres. Les problèmes ont été réglé le 27, soit le jour de la remise.
+        </p>
+        <h2>Chandail</h2>
+        <p style="line-height: 25px;">
+            Cette année, le club de robotique était autosuffisant dans la création de ses chandails. Alexandra avait chez elle une découpeuse Silhouette et le club de robotique s’est procuré une easy press Cricut pour servir de fer a repasser et coller le vinyle
+            sur le chandail. Alexandra et Charles ont passé beaucoup de temps pour essayer de comprendre la machine et utiliser les logiciels de dessins. Durant deux semaines beaucoup d’expérimentations ont été effectuées et deux design sont ressortis.
+            De plus, le club de robotique a proposé aux autres équipes sur Managr d’imprimer leurs chandails pour aider les jeunes équipes à réduire les coûts de ceux-ci. Nous attendons impatiemment des réponses.
+        </p>
+
+
     </div>
 
 </body>
